new map ver-11115

--- a/web/css/russia_map.css
+++ b/web/css/russia_map.css
@@ -1,87 +1,80 @@
-.map-default-index {
-    margin:0;
-    padding: 0;
-    background-color: #f4f4f4;
-    font: bold 12px Trebuchet MS;
-    padding-bottom: 25px;
-    position: relative;
-
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    user-select: none;
+* {
+	padding: 0;
+    margin: 0;
 }
 
-.map-default-index svg {
-    background-color: #f4f4f4;
-    fill: #d1d7dc;
-    stroke: #60666b;
-    margin-top: 55px;
+svg {
+	margin-top: 85px;
 }
 
-.map-default-index .header {
-    display: table;
-    position: absolute;
-    left: -10px;
-    top: 10px;
+#map {
+	background-color: #ddeeff;
+	font: bold 12px Trebuchet MS;
+	width: 1000px;
 }
 
-.map-default-index .header_title {
-    color: #303030;
+#header {
+	display: table;
+	position: absolute;
+	margin-top: 10px;
+	left: 0;
+	top: 0;
+}
+
+#header .flag {
+	padding-left: 10px;
+	height: 55px;
+}
+
+#header .header-title {
+	color: #303030;
     display: table-cell;
     vertical-align: middle;
     font-size: 30px;
-    padding-left: 15px;
+	padding-left: 10px;
 }
 
-.map-default-index .flag {
-    display: table-cell;
-    cursor: pointer;
-}
-
-.map-default-index .button-back {
-    cursor: pointer;
-}
-
-.map-default-index .gerb {
-    height: 75px;
-    padding-left: 15px;
-}
-
-.map-default-index .footer, .map-default-index .footer .inform {
-    padding: 0;
-    margin: 0;
+#footer, #footer .inform {
     display: table;
-    width: 980px;
+    width: 100%;
 }
 
-.map-default-index .footer_left, .map-default-index .footer_right {
+#footer .footer-left, #footer .footer-right {
     display: table-cell;
     width: 50%;
 }
 
-.map-default-index .footer .title {
+#footer .footer-title {
     font-size: 16px;
+	list-style-type: none;
     padding: 0 30px;
     text-transform: uppercase;
-    list-style-type: none;
 
     overflow: hidden;
     height: 150px;
 }
 
-.map-default-index .footer .title.full {
+#footer .title.full {
     overflow: auto;
     height: 100%;
 }
 
-.map-default-index .footer .statistic {
+#footer ul.footer-left .left {
+    float: left;
+    text-transform: none;
+}
+
+#footer ul.footer-right .right {
+    float: right;
+}
+
+#footer li {
     border-bottom: 1px solid #d1d7dc;
     display: table;
     width: 100%;
 }
 
-.map-default-index .footer .statistic .left, .map-default-index .footer .statistic .right {
+#footer li .left, #footer li .right {
     display: table-cell;
     font-size: 16px;
     font-weight: normal;
@@ -90,97 +83,88 @@
     padding-top: 10px;
 }
 
-.map-default-index .footer .statistic .left {
+#footer li .left {
     color: #303030;
     font-weight: normal;
 }
 
-.map-default-index .footer .statistic .right {
+#footer li .right {
     color: #287fc3;
     font-weight: bold;
     text-align: right;
 }
 
-.map-default-index .footer .button_more {
+#footer .more {
     background-color: #3f95b9;
     color: #fff;
     cursor: pointer;
     display: table;
     font-size: 16px;
     font-weight: normal;
-    margin: 15px auto 0;
+    margin: 15px auto;
     padding: 5px 40px;
     text-transform: uppercase;
 }
 
-.map-default-index .regions path:hover,
-.map-default-index .regions path.active,
-.map-default-index .districts path:hover,
-.map-default-index .districts path.active,
-.map-default-index .cities path:hover,
-.map-default-index .cities path.active {
-    cursor: pointer;
-	fill: #a1d568;
+.background {
+	position: absolute;
+	top: 0;
+	stroke-opacity: 0;
+	fill-opacity: 0;
 }
 
-.map-default-index .boundary, 
-.map-default-index .boundary:hover, 
-.map-default-index .boundary:active {
-    fill: none;
+.tooltip {
+    color: #222;
+    background: #fff;
+    padding: .5em;
+    text-shadow: #f5f5f5 0 1px 0;
+    border-radius: 2px;
+    box-shadow: 0px 0px 2px 0px #a6a6a6;
+    opacity: 0.8;
+    position: absolute;
 }
 
-.map-default-index circle {
+.region {
+	fill: #ffffdd;
+	stroke: #226688;
+	opacity: .60;
+}
+
+.boundary {
+	fill: none;
+	stroke: #226688;
+	opacity: .60;
+}
+
+.district {
+	display: none;
+	fill: #ffffdd;
+	stroke: red;
+	opacity: .60;
+}
+
+.city path {
+	display: none;
 	fill: #3f92b9;
 	opacity: .75;
-	r: 5;
-	stroke: #fff;
+	stroke: navy;
 	stroke-width: 2;
 }
 
-.map-default-index circle:hover, .map-default-index circle.active {
-	cursor: pointer;
-	fill: #fff;
-	stroke: #3f92b9;
-}
-
-.map-default-index .city {
-	display: none;
-}
-
-.map-default-index .federal {
+.city path.federal {
 	display: block;
+	fill: green;
 }
 
-#label {
-    color: #fff;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: auto;
-    height: auto;
-    padding: 10px;
-    background-color: #3f95b9;
-    opacity: 0;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-    pointer-events: none;
+.city path.strategy {
+	display: block;
+	fill: red;
 }
 
-path.district {
-    display: none;
+.region:hover, .region.active, .district:hover, .district.active {
+	fill: bisque;
 }
 
-ul .left {
-    display: block;
-    float: left;
-    text-transform: none;
-}
-
-ul .right {
-    display: block;
-    float: right;
+.city path:hover, .city path.active {
+	fill: #fff;
 }
