--- a/web/css/russia_map.css
+++ b/web/css/russia_map.css
@@ -1,290 +1,77 @@
-@media screen and (max-width:600px) {
-    /* Селекторы */
-	svg {
-		margin: 0;
-	}
-	
-	#header .header-title {
-		color: #303030;
-		display: table-cell;
-		vertical-align: middle;
-		font-size: 14px;
-		padding-left: 10px;
-	}
-	
-	#header .flag {
-		padding-left: 10px;
-		height: 25px;
-	}
-	
-	#header .back {
-		height: 35px;
-	}
-	
-	#footer .footer-left, #footer .footer-right {
-		display: block;
-		width: 100%;
-	}
-	
-	#footer .footer-title {
-		font-size: 12px;
-		list-style-type: none;
-		padding: 0 15px;
-		text-transform: uppercase;
-
-		overflow: hidden;
-		height: 150px;
-	}
-	
-	text {
-		font-size: 10px;
-	}
-}
-
-@media screen and (min-width:600px) {
-    /* Селекторы */
-	svg {
-		//margin-top: 85px;
-	}
-	
-	#header .header-title {
-		color: #303030;
-		display: table-cell;
-		vertical-align: middle;
-		font-size: 20px;
-		padding-left: 10px;
-	}
-	
-	#header .flag {
-		padding-left: 10px;
-		height: 35px;
-	}
-	
-	#header .back {
-		height: 45px;
-	}
-	
-	#footer {
-		display: table;
-		width: 100%;
-	}
-	
-	#footer .inform {
-		display: table;
-		width: 100%;
-	}
-	
-	#footer .footer-left, #footer .footer-right {
-		display: table-cell;
-		width: 50%;
-	}
-	
-	#footer .footer-title {
-		//font-size: 16px;
-		font-size: 85%;
-		list-style-type: none;
-		padding: 0 15px;
-		text-transform: uppercase;
-
-		overflow: hidden;
-		height: 150px;
-	}
-	
-	text {
-		font-size: 70%;
-	}
-}
-
-
-@media screen and (min-width:960px) {
-    /* Селекторы */
-	svg {
-		//margin-top: 85px;
-	}
-	
-	#header .header-title {
-		color: #303030;
-		display: table-cell;
-		vertical-align: middle;
-		font-size: 30px;
-		padding-left: 10px;
-	}
-	
-	#header .flag {
-		padding-left: 10px;
-		height: 55px;
-	}
-	
-	#header .back {
-		height: 65px;
-	}
-	
-	#footer {
-		display: table;
-		width: 100%;
-	}
-	
-	#footer .inform {
-		display: table;
-		width: 100%;
-		margin: 0 auto;
-	}
-	
-	#footer .footer-left, #footer .footer-right {
-		display: table-cell;
-		width: 50%;
-	}
-	
-	#footer .footer-title {
-		//font-size: 16px;
-		font-size: 135%;
-		list-style-type: none;
-		padding: 0 15px;
-		text-transform: uppercase;
-
-		overflow: hidden;
-		height: 165px;
-	}
-	
-	text {
-		font-size: 100%;
-	}
-}
-
-@media screen and (min-width:1150px) {
-    /* Селекторы */
-	svg {
-		//margin-top: 85px;
-	}
-	
-	#header .header-title {
-		color: #303030;
-		display: table-cell;
-		vertical-align: middle;
-		font-size: 30px;
-		padding-left: 10px;
-	}
-	
-	#header .flag {
-		padding-left: 10px;
-		height: 55px;
-	}
-	
-	#header .back {
-		height: 65px;
-	}
-	
-	#footer {
-		display: table;
-		width: 100%;
-	}
-	
-	#footer .inform {
-		display: table;
-		width: 80%;
-		margin: 0 auto;
-	}
-	
-	#footer .footer-left, #footer .footer-right {
-		display: table-cell;
-		width: 50%;
-	}
-	
-	#footer .footer-title {
-		//font-size: 16px;
-		font-size: 135%;
-		list-style-type: none;
-		padding: 0 15px;
-		text-transform: uppercase;
-
-		overflow: hidden;
-		height: 165px;
-	}
-	
-	text {
-		font-size: 130%;
-	}
-}
-
-@media screen and (min-width:1400px) {
-    /* Селекторы */
-	svg {
-		//margin-top: 85px;
-	}
-	
-	#header .header-title {
-		color: #303030;
-		display: table-cell;
-		vertical-align: middle;
-		font-size: 30px;
-		padding-left: 10px;
-	}
-	
-	#header .flag {
-		padding-left: 10px;
-		height: 55px;
-	}
-	
-	#header .back {
-		height: 65px;
-	}
-	
-	#footer {
-		display: table;
-		width: 100%;
-	}
-	
-	#footer .inform {
-		display: table;
-		width: 65%;
-		margin: 0 auto;
-	}
-	
-	#footer .footer-left, #footer .footer-right {
-		display: table-cell;
-		width: 50%;
-	}
-	
-	#footer .footer-title {
-		//font-size: 16px;
-		font-size: 135%;
-		list-style-type: none;
-		padding: 0 15px;
-		text-transform: uppercase;
-
-		overflow: hidden;
-		height: 165px;
-	}
-	
-	text {
-		font-size: 130%;
-	}
-}
-
 * {
 	padding: 0;
     margin: 0;
+}
+
+path {
+	cursor: pointer;
+}
+
+text {
+	fill: darkslategray;
+	font-size: 14px;
 }
 
 .container {
 	width: 100% !important;
 }
 
-
-
 #map {
 	background-color: #ddeeff;
-	//background-color: #f4f4f4;
 	font: bold 12px Trebuchet MS;
+	position: relative;
 	width: 100%;
 }
 
 #header {
 	display: table;
-	position: absolute;
 	margin-top: 10px;
+	position: absolute;
 	left: 0;
 	top: 0;
+}
+
+#header .header-title {
+	color: #303030;
+	display: table-cell;
+	vertical-align: middle;
+	font-size: 26px;
+	padding-left: 10px;
+}
+
+#header .flag {
+	padding-left: 10px;
+	height: 45px;
+}
+
+#header .back {
+	cursor: pointer;
+	height: 55px;
+}
+
+#footer {
+	display: table;
+	width: 100%;
+}
+
+#footer .inform {
+	display: table;
+	width: 1000px;
+	margin: 0 auto;
+}
+
+#footer .footer-left, #footer .footer-right {
+	display: table-cell;
+	width: 50%;
+}
+
+#footer .footer-title {
+	font-size: 16px;
+	list-style-type: none;
+	padding: 0 15px;
+	text-transform: uppercase;
+	overflow: hidden;
+	height: 155px;
 }
 
 #footer .footer-title .left {
@@ -318,8 +105,7 @@
 
 #footer li .left, #footer li .right {
     display: table-cell;
-    //font-size: 16px;
-	font-size: 135%;
+    font-size: 16px;
     font-weight: normal;
     text-transform: none;
     line-height: 1.3;
@@ -342,8 +128,7 @@
     color: #fff;
     cursor: pointer;
     display: table;
-    //font-size: 16px;
-	//font-size: 135%;
+    font-size: 14px;
     font-weight: normal;
     margin: 15px auto;
     padding: 5px 40px;
@@ -368,21 +153,14 @@
     position: absolute;
 }
 
-path {
-	cursor: pointer;
-}
-
 .region {
-	//fill: #ffffdd;
 	fill: #d1d7dc;
-	//stroke: #226688;
 	stroke: #60666b;
 	opacity: .60;
 }
 
 .boundary {
 	fill: none;
-	//stroke: #226688;
 	stroke: #60666b;
 	opacity: .60;
 }
@@ -391,8 +169,6 @@ path {
 	display: none;
 	fill: #d1d7dc;
 	stroke: #60666b;
-	//fill: #ffffdd;
-	//stroke: red;
 	opacity: .60;
 }
 
@@ -415,7 +191,6 @@ path {
 }
 
 .region:hover, .region.active, .district:hover, .district.active {
-	//fill: bisque;
 	fill: #a1d568;
 }
 
@@ -432,13 +207,14 @@ path {
 
 .attribute .name {
 	color: #303030;
+	font-size: 14px;
     font-weight: normal;
-	width: 40%;
+	width: 45%;
 }
 
 .attribute .date {
     color: darkcyan;
-	//font-size: 12px;
+	font-size: 13px;
 	font-weight: normal;
 	margin-top: 4px;
 	text-align: center;
@@ -447,9 +223,10 @@ path {
 
 .attribute .value {
 	color: #287fc3;
+	font-size: 14px;
     font-weight: bold;
     text-align: right;
-	width: 45%;
+	width: 40%;
 }
 
 .glyphicon-arrow-up {
